# dcb-berlin-guide

./: .env.local  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-and-push.yml  build-push-deploy-backend.yml  build-push-deploy-frontend.yml  build-push-deploy.yml  ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/: manage.py
backend/src/berlin_guide/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/locations/: admin.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/src/locations/fixtures/: categories.json  locations.json
backend/src/locations/management/commands/: geocode.py
backend/src/locations/migrations/: 0001_initial.py  0002_auto_20210402_2042.py  0003_auto_20210403_1551.py  0004_auto_20210417_0752.py  0005_auto_20210417_0813.py  0006_auto_20210417_0815.py  0007_auto_20210417_0818.py  0008_auto_20210417_0819.py  0009_auto_20210417_0823.py  0010_location_phone.py  0011_auto_20211113_2125.py  0012_alter_location_phone.py  0013_location_user_submitted.py
frontend/: Dockerfile  craco.config.js  nginx.conf  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  Pins.js  SearchInput.js  Select.js  constants.js  contexts.js  hooks.js  index.css  utils.js
